fixed small issue where add button was creating extra space in home page

--- a/source/CSS/Homestyle.css
+++ b/source/CSS/Homestyle.css
@@ -27,14 +27,13 @@ body {
     display: flex;
     width: 100%;
     padding: 0 20px;
-    position: relative;
+    box-sizing: border-box;
 }
 
 .small-button-container {
     display: flex;
     align-items: center;
-    position: relative;
-    right: 30%;
+    margin-right: 500px;
 }
 
 .small-add-button {
@@ -72,7 +71,7 @@ body {
 
 .search-input {
     border: none;
-    padding: 10px;
+
     width: 100%;
     outline: none;
     font-size: 16px;
